--- a/index.html
+++ b/index.html
@@ -2,33 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | IP Address Tracker</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./style.css">
+  <title>IP Address Tracker</title>
 </head>
 <body>
-
-  IP Address Tracker
-
-  Search for any IP address or domain
-
-  IP Address
-  Location
-  Timezone
-    UTC <!-- add offset value dynamically using the API -->
-  ISP
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="container">
+    <div class="search">
+      <div>IP Address Tracker</div>
+      <form id="form">
+        <input id="ip-input" placeholder="Search for any IP address or domain" />
+        <button type="submit" id="submit-btn" aria-label="Submit">
+          <img alt="arrow" src="./images/icon-arrow.svg">
+        </button>
+      </form>
+    </div>
+    <div class="result">
+      <div class="result-box">
+        <div class="result-title">IP ADDRESS</div>
+        <div id="ip">192.212.174.101</div>
+      </div>
+      <div class="result-box">
+        <div class="result-title">LOCATION</div>
+        <div id="location">Brooklyn, NY 10001</div>
+      </div>
+      <div class="result-box">
+        <div class="result-title">TIMEZONE</div>
+        <div id="timezone">UTC -05:00</div>
+      </div>
+      <div class="result-box">
+        <div class="result-title">ISP</div>
+        <div id="isp">SpaceX Starlink</div>
+      </div>
+    </div>
+    <div class="map-display"></div>
   </div>
+  <script src="./script.js"></script>
 </body>
 </html>
