finish the search function and mobile page

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
     <div class="result">
       <div class="result-box">
         <div class="result-title">IP ADDRESS</div>
-        <div id="ip">192.212.174.101</div>
+        <div id="ip"></div>
       </div>
       <div class="result-box">
         <div class="result-title">LOCATION</div>
-        <div id="location">Brooklyn, NY 10001</div>
+        <div id="location"></div>
       </div>
       <div class="result-box">
         <div class="result-title">TIMEZONE</div>
-        <div id="timezone">UTC -05:00</div>
+        <div id="timezone"></div>
       </div>
       <div class="result-box">
         <div class="result-title">ISP</div>
-        <div id="isp">SpaceX Starlink</div>
+        <div id="isp"></div>
       </div>
     </div>
     <div id="map"></div>
